// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
[
  [
    "main.js",
    1843,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 1843,
    },
  ],
  [
    "main.js.gz",
    585,
    {
      "compressed": true,
      "size": 585,
    },
  ],
  [
    "newFile.js",
    23,
    {
      "related": {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  [
    "newFile.js.gz",
    43,
    {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16013,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16013,
    },
  ],
  [
    "main.js.gz",
    3933,
    {
      "compressed": true,
      "size": 3933,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16013,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16013,
    },
  ],
  [
    "main.js.gz",
    3933,
    {
      "compressed": true,
      "size": 3933,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.cd3aed5809a2faa4eb5a.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.68e61e02648eb0a96ddb.js",
    16100,
    {
      "contenthash": "68e61e02648eb0a96ddb",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.68e61e02648eb0a96ddb.js.gz",
      },
      "size": 16100,
    },
  ],
  [
    "main.68e61e02648eb0a96ddb.js.gz",
    4017,
    {
      "compressed": true,
      "immutable": true,
      "size": 4017,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16069,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16069,
    },
  ],
  [
    "main.js.gz",
    3998,
    {
      "compressed": true,
      "size": 3998,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    15997,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15997,
    },
  ],
  [
    "main.js.gz",
    3930,
    {
      "compressed": true,
      "size": 3930,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    94117,
    {
      "related": {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.png.gz",
    73650,
    {
      "compressed": true,
      "size": 73650,
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    15997,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 15997,
    },
  ],
  [
    "main.js.gz",
    3930,
    {
      "compressed": true,
      "size": 3930,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16053,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16053,
    },
  ],
  [
    "main.js.gz",
    3995,
    {
      "compressed": true,
      "size": 3995,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16090,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16090,
    },
  ],
  [
    "main.js.gz",
    4017,
    {
      "compressed": true,
      "size": 4017,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16053,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16053,
    },
  ],
  [
    "main.js.br",
    3491,
    {
      "compressed": true,
      "size": 3491,
    },
  ],
  [
    "main.js.custom",
    16053,
    {
      "compressed": true,
      "size": 16053,
    },
  ],
  [
    "main.js.gz",
    3995,
    {
      "compressed": true,
      "size": 3995,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16053,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16053,
    },
  ],
  [
    "main.js.br",
    3491,
    {
      "compressed": true,
      "size": 3491,
    },
  ],
  [
    "main.js.custom",
    16053,
    {
      "compressed": true,
      "size": 16053,
    },
  ],
  [
    "main.js.gz",
    3995,
    {
      "compressed": true,
      "size": 3995,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16053,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16053,
    },
  ],
  [
    "main.js.gz",
    3995,
    {
      "compressed": true,
      "size": 3995,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16053,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16053,
    },
  ],
  [
    "main.js.gz",
    3995,
    {
      "compressed": true,
      "size": 3995,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16100,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16100,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4019,
    {
      "compressed": true,
      "immutable": true,
      "size": 4019,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16100,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16100,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4019,
    {
      "compressed": true,
      "immutable": true,
      "size": 4019,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `[]`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4018,
    {
      "compressed": true,
      "immutable": true,
      "size": 4018,
    },
  ],
  [
    "main.js?var=87e4bf99b728fffc08a0",
    16101,
    {
      "contenthash": "87e4bf99b728fffc08a0",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16101,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `[]`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16100,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16100,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4019,
    {
      "compressed": true,
      "immutable": true,
      "size": 4019,
    },
  ],
  [
    "stats.json",
    155,
    {
      "size": 155,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=ff0ad4032ae148f14da4",
    194,
    {
      "contenthash": "ff0ad4032ae148f14da4",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4070,
    {
      "compressed": true,
      "immutable": true,
      "size": 4070,
    },
  ],
  [
    "main.js.map.gz",
    4158,
    {
      "compressed": true,
      "size": 4158,
    },
  ],
  [
    "main.js.map?var=73bfdc1831ffc69a2d3f",
    13104,
    {
      "development": true,
      "related": {
        "gzipped": "main.js.map.gz",
      },
      "size": 13104,
    },
  ],
  [
    "main.js?var=73bfdc1831ffc69a2d3f",
    16162,
    {
      "contenthash": "73bfdc1831ffc69a2d3f",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=73bfdc1831ffc69a2d3f",
      },
      "size": 16162,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.br",
    123,
    {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  [
    "async.async.js.compress",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.custom?foo=bar#hash",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.br",
    3514,
    {
      "compressed": true,
      "immutable": true,
      "size": 3514,
    },
  ],
  [
    "main.js.compress",
    16104,
    {
      "compressed": true,
      "immutable": true,
      "size": 16104,
    },
  ],
  [
    "main.js.custom?foo=bar#hash",
    16104,
    {
      "compressed": true,
      "immutable": true,
      "size": 16104,
    },
  ],
  [
    "main.js.gz",
    4021,
    {
      "compressed": true,
      "immutable": true,
      "size": 4021,
    },
  ],
  [
    "main.js?var=6d8b5bc920f6f6bff225",
    16104,
    {
      "contenthash": "6d8b5bc920f6f6bff225",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 16104,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4021,
    {
      "compressed": true,
      "immutable": true,
      "size": 4021,
    },
  ],
  [
    "main.js?var=6d8b5bc920f6f6bff225",
    16104,
    {
      "contenthash": "6d8b5bc920f6f6bff225",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16104,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `[]`;

exports[`CompressionPlugin should work: warnings 1`] = `[]`;
